--- a/examples/bound-sensor-demo/static/index.css
+++ b/examples/bound-sensor-demo/static/index.css
@@ -12,6 +12,6 @@ html {
   overflow: auto;
   background-color: #efefef;
   border: 1px solid #000;
-  position: relative;
+  display: inline-block;
 }
 
