Fixes a bug in AngularBoundSensor - Updates its demo accordingly

--- a/examples/angular-bound-sensor-demo/src/app/example/component.scss
+++ b/examples/angular-bound-sensor-demo/src/app/example/component.scss
@@ -4,6 +4,7 @@
   background-color: #fff;
   border: 1px dotted #000;
   text-align: center;
+  position: relative;
   cursor: default;
 
   &.flexbox {
